syntax = "proto3";

package blog ;
import "google/protobuf/empty.proto";

option go_package = "github.com/inabinash/grpc/blog/proto" ;

message Blog {
    string id =1;
    string name =2;
    string authour =3;
    string content =4;
}

message BlogId {
    string id =1;
}

service BlogService {
    rpc CreateBlog(Blog) returns (BlogId) {};
    rpc ReadBlog(BlogId) returns (Blog) {};
    rpc UpdateBlog(Blog) returns (google.protobuf.Empty){};
    rpc DeleteBlog(BlogId) returns (google.protobuf.Empty){};
    rpc ListBlog(google.protobuf.Empty) returns (stream Blog) {};
}

